небольшие корректировки по оформлению + смена алгоритма поиска пути